_scss/main.scss
nav.sidebar {
    position: fixed;
    top: 0;
    left: 0;

    background-color: #000000;
    $nav-font-color: #7B858D!important;
    color: $nav-font-color;
    a {
        text-decoration: none;
    }
    h1 {
        display: inline-block;
        a {
            color: #FFFFFF;
            display: inline-block;
        }
    }

    a .text-muted {
        color: $nav-font-color;
    }
    @include media-breakpoint-up(md) {
        background-color: unset;
        bottom: 0;
        display: block!important;
        padding: 1em;
    }

    .navbar-toggler {
        color: rgba(255,255,255,.55);
        border-color: rgba(255,255,255,.55);
        float: right;
        margin-top: 0.75em;
        @include media-breakpoint-up(md) {
            display: none;
        }
    }

    #nav-collapse {
        display: none;
        margin-top: 1em;
        &.nav-collapse-show {
            display: block;
        }
        @include media-breakpoint-up(md) {
            margin-top: 2em;
            display: block;
        }
    }

    ul {
        list-style: none;
        padding-left: 0;
        li {
            @extend .h3;
            & a {
                color: $nav-font-color;
                text-decoration: none;
                &:hover {
                    text-decoration: underline;
                }
            }
            .nav-item--active {
                text-decoration: underline;
            }
        }
    }
}
#nav-bg {
    display: none;
    @include media-breakpoint-up(md) {
        position: absolute;
        display: block;
        top: 0;
        bottom: 0;
        right: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: #000000;
        transform: skewX(-8deg);
        transform-origin: top right;
        z-index: -100;
    }
}

main {
    padding-top: 90px; 
    @include media-breakpoint-up(md) {
        padding-top: 1em; 
    }
    h3 {
        margin-top: 2.5em;
    }
    h3.tools-header {
        margin-top: unset;
    }
    a {
        color: #000000;
        &:hover {
            color: #000000;
            font-weight: strong;
        }
    }
    .bi-box-arrow-up-right {
        margin-left: 0.25em;
        margin-bottom: 5px;
    }
    .pill-box {
        margin-bottom: 1em;
    }
}

